core/primitives/src/snapshots/near_primitives__views__tests__exec_metadata_v1_view.snap
---
source: core/primitives/src/views.rs
expression: view
---
{
  "version": 1,
  "gas_profile": null
}
